--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "markdown-it-attrs": "^3.0.3",
     "markdown-it-footnote": "^3.0.2",
     "title-case": "^3.0.2"
-  }
+  },
+  "main": ".eleventy.js"
 }
