--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A starter site for building a mind garden in eleventy.",
   "scripts": {
     "serve": "eleventy --serve",
-    "compile": "eleventy"
+    "compile": "eleventy",
+    "watch:sass": "npx sass sass:assets/ --watch"
   },
   "repository": {
     "type": "git",
@@ -18,11 +19,15 @@
   },
   "homepage": "https://github.com/binyamin/eleventy-garden#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "markdown-it": "^12.0.1",
-    "markdown-it-attrs": "^3.0.3",
-    "markdown-it-footnote": "^3.0.2",
-    "title-case": "^3.0.2"
+    "@11ty/eleventy": "1.0.0-canary.23",
+    "markdown-it": "^12.0.6",
+    "markdown-it-attrs": "^4.0.0",
+    "markdown-it-footnote": "^3.0.3",
+    "npm-run-all": "^4.1.5",
+    "title-case": "^3.0.3"
   },
-  "main": ".eleventy.js"
+  "main": ".eleventy.js",
+  "dependencies": {
+    "sass": "^1.34.0"
+  }
 }
