--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "markdown-it": "^12.0.6",
     "markdown-it-attrs": "^4.0.0",
     "markdown-it-footnote": "^3.0.3",
+    "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "title-case": "^3.0.3"
   },
